--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,48 +28,45 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  http: ^1.1.0
+  app_settings: ^5.1.1
   crypto: ^3.0.3
-  provider: ^6.0.5
-  html: ^0.15.4
+  cupertino_icons: ^1.0.6
+  dynamic_grid_view: ^0.0.1
   firebase_auth: ^4.9.0
   firebase_core: ^2.15.1
   firebase_messaging: ^14.6.7
+  flutter:
+    sdk: flutter
   flutter_html: ^3.0.0-beta.2
+  flutter_html_iframe: ^3.0.0-beta.2
+  flutter_local_notifications: ^15.1.1
   google_fonts: ^4.0.4
+  html: ^0.15.4
+  http: ^1.1.0
+  intl: ^0.18.1
   package_info_plus: ^4.1.0
-  webview_flutter: ^4.2.4
+  provider: ^6.0.5
+  qr_code_scanner: ^1.0.1
   razorpay_flutter: ^1.3.4
+  # share: ^2.0.4
+  share_plus: ^7.1.0
   shared_preferences: ^2.2.1
   sqflite: ^2.3.0
-  intl: ^0.18.1
   url_launcher: ^6.1.11
-  qr_code_scanner: ^1.0.1
-  dynamic_grid_view: ^0.0.1
-  flutter_local_notifications: ^15.1.1
-  app_settings: ^5.1.1
-  flutter_html_iframe: ^3.0.0-beta.2
+  webview_flutter: ^4.2.4
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -83,13 +80,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
