--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   sqflite: ^2.3.0
   url_launcher: ^6.1.11
   webview_flutter: ^4.2.4
+  dotted_border: ^2.1.0
+  image_picker: 1.0.4
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
