--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   image_picker: ^1.0.4
   flutter_rating_stars: ^1.0.3+4
   flutter_rating_bar: ^4.0.1
+  rounded_loading_button: ^2.1.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
